# bytetrack

./: .gitignore  Cargo.toml  README.md
bytetrack/: Cargo.toml  README.md  rustdoc.md  rustdoc.sh
bytetrack/src/: bbox.rs  bytetrack.rs  kalman.rs  lib.rs  matching.rs  object.rs  object_status.rs  tracked_detection.rs
hooks/: README.md  pre-commit
mot-challenge/: Cargo.toml  LICENSE
mot-challenge/benches/: mot17_benchmark.rs
mot-challenge/examples/: mot17_plotting.rs
mot-challenge/src/: dataset.rs  lib.rs
src/: bbox.rs  bytetrack.rs  detection.rs  lib.rs  matching.rs  object.rs
tests/: mot17.rs
