[package]
name = "bytetrack"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
nalgebra = "0.34"
pathfinding = "4.14.0"
kalman_filters = { version = "1.0.0", features = ["nalgebra"] }
uuid = { version = "1.18.1", optional = true, default-features = false, features = [
    "v4",
] }

[features]
default = []
uuid = ["dep:uuid"]
