[package]
name = "mot-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
polars = { version = "0.45.0", features = ["csv"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
zip = "2.2"
serde = { version = "1.0", features = ["derive"] }
bytetrack = { path = "../" }
plotters = "0.3"

